--- a/style.css
+++ b/style.css
@@ -41,21 +41,12 @@ label[for="amount"] {
 input, select, button {
     height: 40px;
     width: 100%;
-    padding: 0px 10px 0px 25px;
+    padding: 0px 10px 0px 10px;
     font-size: 20px;
     outline: none;
     border: 1px solid gray;
     border-radius: 10px;
     
-}
-
-#amountLabel::before {
-    content: "$";
-    position: absolute;
-    top: 50px;
-    left: 10px;
-    color: gray;
-    font-size: 20px;
 }
 
 select {
@@ -71,6 +62,8 @@ select {
 
 .container h2 {
     margin: 0;
+    transition: all 0.5s ease-in-out;
+    color: black;
 }
 
 button {
