--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    background-color: #3399FF;
+    background-color: #b756d7;
     color: black;
     display: flex;
     justify-content: center;
@@ -68,16 +68,17 @@ select {
 
 button {
     padding: 0;
-    background-color: #4cfcff;
+    background-color: black;
     border: none;
-    color: rgb(0, 0, 0);
+    color: white;
     cursor: pointer;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
 }
 
 button:hover {
-    background-color: #c0feff;
+    background-color: white;
+    color: black;
     transform: scale(1.04);
     transition: all 0.2s ease-in-out;
 }
