--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    background-color: #b756d7;
-    color: black;
+    background-color: #7743DB;
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -86,7 +86,7 @@ button:hover {
 .changeBtn {
     width: 40px;
     height: 40px;
-    background-color: white;
+    background-color: black;
     border-radius: 50%;
     display: flex;
     align-items: center;
